Add new skills block. Edit current skills

--- a/src/sass/shared/global.sass
+++ b/src/sass/shared/global.sass
@@ -242,6 +242,7 @@ html:not(.no-js) [data-aos=fade-up]
 @media screen and (max-width: 991px)
   body
     padding: 3.125rem 0
+    font-size: 1rem
 
   .section
     margin: 0 0 11.25rem 0
