--- a/src/views/shared/_header.ejs
+++ b/src/views/shared/_header.ejs
@@ -3,7 +3,7 @@
     <img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/" title="About">about</a>
-    <a href="mailto:fabio@sangregorio.dev" target="_blank" title="Contact">contact</a>
+    <a href="/about/" title="About"><%= header.about %></a>
+    <a href="mailto:fabio@sangregorio.dev" target="_blank" title="Contact"><%= header.contact %></a>
   </div>
 </header>  
