--- a/src/views/about/_abovethefold.ejs
+++ b/src/views/about/_abovethefold.ejs
@@ -4,23 +4,20 @@
       <div class="page-title atf__h1">
         <div class="reveal-text">
           <div class="reveal-text__content">
-            Made of coding, coffee, ski<span class="atf__number number--1">(1)</span> and tv shows.<span
+            <%= about.title.line1 %><span class="atf__number number--1">(1)</span> <%= about.title.line2 %><span
               class="atf__number number--2">(2)</span>
           </div>
         </div>
       </div>
       <div class="muted atf__notes" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-        (1) Resulted in 1 broken finger and 1 fractured & dislocated shoulder *so far*<br>
-        (2) Seriously, more than 6,900 episodes registered on
+        (1) <%= about.notes.line1 %><br>
+        (2) <%= about.notes.line2 %>
         <a title="TVtime" href="https://www.tvtime.com/it/user/7624959/profile"
           class="link--decorate link--decorate-visible">TVtime</a>
       </div>
     </header>
     <div class="atf__text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="900">
-      Being born in Bergamo, italian is my mother tongue. I also know English fairly well though, so sometimes I help
-      out translating the web, such as Wikipedia and Google Translate Community.<br>
-      I love working out at the gym in the morning, before heading to work and university.
-      I love organization. I love coffee. I love matte black.
+      <%- about.description %>
     </div>
   </div>
 </section>
