--- a/src/views/about/_me.ejs
+++ b/src/views/about/_me.ejs
@@ -1,12 +1,12 @@
 <section class="section me">
   <header class="me__header" data-aos="fade-up" data-aos-delay="50">
-    <div class="h1 me__h1"><%= title %></div>
+    <div class="h1 me__h1"><%= model.title %></div>
     <div class="me__text">
-      <%- description %>
+      <%- model.description %>
     </div>
   </header>
   <div class="me__items mobile-slider">
-    <% for (let [index, item] of me.entries()) { %>
+    <% for (let [index, item] of model.items.entries()) { %>
     <div class="me__item" data-aos="fade-up" data-aos-delay="50">
       <% if (item.title) { %>
       <div class="h2 me__item-h2">
@@ -26,7 +26,7 @@
               <%= ("0" + (index + 1)).slice(-2) %>
             </span>
             <span class="total-slides">
-              <%= ("0" + me.length).slice(-2) %>
+              <%= ("0" + model.items.length).slice(-2) %>
             </span>
           </div>
           <a title="<%= item.link.title %>" target="_blank" href="<%= item.link.url %>" class="link--decorate">
@@ -52,7 +52,7 @@
             <%= ("0" + (index + 1)).slice(-2) %>
           </span>
           <span class="total-slides">
-            <%= ("0" + me.length).slice(-2) %>
+            <%= ("0" + model.items.length).slice(-2) %>
           </span>
         </div>
         <a title="<%= item.link.title %>" target="_blank" href="<%= item.link.url %>" class="link--decorate">
@@ -66,7 +66,7 @@
           <%= ("0" + (index + 1)).slice(-2) %>
         </span>
         <span class="total-slides">
-          <%= ("0" + me.length).slice(-2) %>
+          <%= ("0" + model.items.length).slice(-2) %>
         </span>
       </div>
       <% } %>
