Edit link to match multilanguage paths

--- a/src/views/shared/_footer.ejs
+++ b/src/views/shared/_footer.ejs
@@ -6,7 +6,7 @@
     </a>
   </div>
   <div class="footer__bar">
-    <a href="/" class="footer__logo"><img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio."></a>
+    <a href="/<%= lang %>/" class="footer__logo"><img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio."></a>
     <div class="footer__message"><%= footer.goodbye %></div>
     <div class="footer__links">
       <a title="Github" target="_blank" href="https://github.com/fabiosangregorio">github</a>
