--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,7 @@
 <section class="section visit" data-aos="fade-up">
   <div class="visit__text">
     <header class="h1 visit__h1"><%= home.about.title %></header>
-    <a title="About" href="/about/" class="visit__link link--decorate link--arrow">
+    <a title="About" href="/<%= lang %>/about/" class="visit__link link--decorate link--arrow">
       <%= home.about.link %>
     </a>
   </div>
