--- a/src/views/projects/index.ejs
+++ b/src/views/projects/index.ejs
@@ -2,7 +2,7 @@
 <%- layout('../shared/_layout') %>
 
 <div class="section atf">
-  <a href="/" class="atf__link link--arrow-back link--decorate">Back to homepage</a>
+  <a href="/<%= lang %>/" class="atf__link link--arrow-back link--decorate">Back to homepage</a>
   <div>
     <header class="atf__header">
       <div class="page-title atf__h1">
