--- a/src/views/shared/_header.ejs
+++ b/src/views/shared/_header.ejs
@@ -1,9 +1,9 @@
 <header class="page-header">
-  <a href="/" class="logo" title="Fabio.">
+  <a href="/<%= lang %>/" class="logo" title="Fabio.">
     <img data-dark-theme-src="/images/logo--dark.svg" src="/images/logo.svg" alt="Fabio.">
   </a>
   <div class="page-header__links">
-    <a href="/about/" title="About"><%= header.about %></a>
+    <a href="/<%= lang %>/about/" title="About"><%= header.about %></a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank" title="Contact"><%= header.contact %></a>
   </div>
 </header>  
