Add redirect to en homepage

--- a/src/views/shared/_header.ejs
+++ b/src/views/shared/_header.ejs
@@ -5,5 +5,6 @@
   <div class="page-header__links">
     <a href="/<%= lang %>/about/" title="About"><%= header.about %></a>
     <a href="mailto:fabio@sangregorio.dev" target="_blank" title="Contact"><%= header.contact %></a>
+    <a href="/<%= lang == 'en' ? 'it' : 'en' %>/" title="Fabio."><%= header.langlink %></a>
   </div>
 </header>  
