--- a/src/views/_skills.ejs
+++ b/src/views/_skills.ejs
@@ -1,5 +1,5 @@
 <section class="section">
-  <header class="skills__h1 h1" data-aos="fade-up" data-aos-delay="50"><h2>They allowed me to learn some powerful skills.</h2></header>
+  <header class="skills__h1 h1" data-aos="fade-up" data-aos-delay="50"><h2><%= home.skills %></h2></header>
   <div class="skills" data-aos="fade-up">
     <% for (var i = 0; i < skills.length; i++) { %>
       <div class="skills__item">
