--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,9 +18,9 @@
 
 <section class="section visit" data-aos="fade-up">
   <div class="visit__text">
-    <header class="h1 visit__h1">Want to know more about me?</header>
-    <a title="About" href="/about/" class="visit__link link--decorate link--arrow">
-      Visit my about page
+    <header class="h1 visit__h1"><%= home.about.title %></header>
+    <a title="About" href="/<%= lang %>/about/" class="visit__link link--decorate link--arrow">
+      <%= home.about.link %>
     </a>
   </div>
   <div>
