Minor changes to links accent

--- a/src/sass/shared/global.sass
+++ b/src/sass/shared/global.sass
@@ -67,11 +67,12 @@ a
       height: calc(0.5em + 2px)
       width: $width
       top: calc(0.75em - 2px)
-      left: calc(-0.5em)
+      left: calc(-0.4em)
       position: absolute
       background-color: #FFF0A3 
       z-index: -1
       transition: $theme--transition, 0.5s width cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      border-radius: 4px
     &:hover:before
       width: $hoverWidth
     &.link--decorate-visible
