Add competitions models and view

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,6 +16,8 @@
 
 <%- partial('_skills') %>
 
+<%- partial('_competitions') %>
+
 <section class="section visit" data-aos="fade-up">
   <div class="visit__text">
     <header class="h1 visit__h1"><%= home.about.title %></header>
