--- a/src/views/_experience.ejs
+++ b/src/views/_experience.ejs
@@ -10,11 +10,11 @@
 <section class="section experiences-section js-experiences-section">
   <header class="h1 experiences__h1" data-aos="fade-up" data-aos-delay="50">
     <div><h2><%= home.jobs %></h2></div>
-    <div class="muted experiences__mobile-opener">(tap to <span class="js-experiences-toggle">show</span> details)</div>
+    <div class="muted experiences__opener">(tap to <span class="js-experiences-toggle">show</span> details)</div>
   </header>
   <header class="h1 experiences__h1" data-aos="fade-up" data-aos-delay="50">
     <div><h2><%= home.education %></h2></div>
-    <div class="muted experiences__mobile-opener">(tap to <span class="js-experiences-toggle">show</span> details)</div>
+    <div class="muted experiences__opener">(tap to <span class="js-experiences-toggle">show</span> details)</div>
   </header>
   <% for (experience of experiences) { %>
     <article class="experience" data-aos="fade-up">
